--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,12 @@ server.ssl.key-store-password=qasdqasd
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=myserver
 server.ssl.enabled=true
+
+#database related settings
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mafia
+spring.datasource.username=root
+spring.datasource.password=qasdqasd
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
